fixed tab icons are not visible

--- a/Builds/modern-dark/source/Imports/Nova Definitions.scss
+++ b/Builds/modern-dark/source/Imports/Nova Definitions.scss
@@ -26,7 +26,7 @@ $toolbutton-border: #2b394d;
 $toolbutton-hover: #2f3f63;
 $toolbutton-hover-border: #4d6eb6;
 $toolbutton-pressed: #3f5cb5;
-$highlight-bg: #5c8dff;
+$highlight-bg: #2f4b8d;
 $highlight-pressed: #4a79e6;
 $highlight-text: #ffffff;
 $menu-bg: #131a24;
